# BioEval

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/scripts/: seed-integrations.ts  seed-models.ts  seed.ts
backend/src/: index.ts
docker-files/: .env.example  docker-compose-gpu.yml  docker-compose.host-native.yml  docker-compose.yml  start-macos-host-stack.sh  start.sh  tunnel-proxy.js
docker-files/rabbitmq/: rabbitmq.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
inference-service/: .dockerignore  Dockerfile  install-rabbitmq.sh  pyproject.toml
inference-service/scripts/: run-macos-host.sh
inference-service/src/: __main__.py  http_server.py  rabbitmq.py
inference-service/src/db/: pool.py
inference-service/src/db/queries/: config.py  evaluation.py  inference.py
inference-service/src/evaluation/: client.py  message_handler.py  parser.py
inference-service/src/evaluation/callables/: aggregate.py  individual.py  llm_judge.py
inference-service/src/evaluation/libs/: bartscore.py  meteor.py
inference-service/src/inference/: anthropic.py  azure.py  google.py  huggingface.py  message_handler.py
inference-service/src/statistics/: handler.py
inference-service/src/storage/: duckdb.py  minio.py  object.py
public-host/: README.md  docker-compose.yaml  package-lock.json  package.json
rabbitmq-test/: consumer.py  producer.py
(+123 files in other folders)
