[project]
name = "inference-server"
version = "0.1.0"
authors = [{ name = "Yiming", email = "yiming.k15@gmail.com" }]
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.7.0",
    "bert-score>=0.3.13",
    "boto3>=1.38.36",
    "dotenv>=0.9.9",
    "duckdb>=1.3.1",
    "evaluate>=0.4.4",
    "filelock>=3.18.0",
    "fsspec>=2025.5.1",
    "nltk>=3.9.1",
    "openai>=1.98.0",
    "pika>=1.3.2",
    "platformdirs>=4.3.8",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=20.0.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "types-boto3[essential]>=1.38.38",
]
requires-python = ">=3.10"
